<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">WHS</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="hello_world">testing worlds</string>
    <string name="bWebsite">Website</string>
    <string name="bTopNews">Top News</string>
    <string name="bEvents"> Events </string>
    <string name="bAnnouncements">Announcements</string>
    <string name="title_activity_news">Top News</string>
    <string name="title_activity_events">Upcoming Events</string>
    <string name="title_activity_announcements">Daily Announcements</string>

    <string-array name="website_choices_freshman">
        <item>Homepage</item>
        <item>Calendar</item>
        <item>Homelogic</item>
        <item>Moodle</item>
        <item>About Wheeling</item>
    </string-array>
    <string-array name="website_choices_sophmore">
        <item>Homepage</item>
        <item>Calendar</item>
        <item>Homelogic</item>
        <item>Moodle</item>
    </string-array>
    <string-array name="website_choices_junior">
        <item>Homepage</item>
        <item>Calendar</item>
        <item>Homelogic</item>
        <item>Moodle</item>
        <item>College Resources</item>
        <item>ACT</item>
    </string-array>
    <string-array name="website_choices_senior">
        <item>Homepage</item>
        <item>Calendar</item>
        <item>Homelogic</item>
        <item>Moodle</item>
        <item>College Resources</item>
    </string-array>
    <string-array name="News">
        <item>Wheeling High School Orchesis Annual Concert</item>
        <item>Wheeling High School MAth Team Wins District Meet</item>
        <item>Wheeling Dance Teacher To Recieve The 2014 Ruth Page Award</item>
        <item>The SisterHood Of the Traveling Dress</item>
    </string-array>

    <string name="title_home">Home</string>
    <string name="title_events">Events</string>
    <string name="title_announcements">Announcements</string>
    <string name="title_news">Top News</string>
    <string name="title_activity_read"></string>
    <string name="action_english">English</string>
    <string name="action_spanish">Spanish</string>
    <string name="action_russian">Russian</string>
    <string name="bWebsite_Spanish">Sitio Web</string>
    <string name="bAnnouncements_Spanish">Noticias</string>
    <string name="bTopNews_Spanish">Noticias Superior</string>
    <string name="bEvents_Spanish">Próximos Eventos</string>
    <string name="bWebsite_Russian">сайт</string>
    <string name="bAnnouncements_Russian">Объявления</string>
    <string name="bTopNews_Russian">Главные новости</string>
    <string name="bEvents_Russian">Предстоящие события</string>
    <string name="title_activity_navigate">Navigate</string>
    <string name="title_section1">Regular Schedule</string>
    <string name="title_section2">Gold Late Start</string>
    <string name="title_section3">Blue Late Start</string>
    <string name="title_section4">Exam Day 1</string>
    <string name="title_section5">Exam Day 2</string>
    <string name="title_section6">May Reading</string>
    <string name="title_section7">May Late Start</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_change_settings">Settings</string>

    <string-array name="events_choices">
        <item>Save Event</item>
        <item>Cancel</item>
        <item android:id="@+id/item1" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </string-array>

    <string name="title_activity_whs__home">WHS</string>
    <string name="title_activity_scedule">Schedule</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_about">About Us</string>
    <string name="title_activity_schedule2">Schedule2</string>

</resources>
