<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_English"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_english"
        />
    
    <item
        android:id="@+id/action_Spanish"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_spanish"
        />
    
    <item
        android:id="@+id/action_Russian"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_russian"
        />
    <item
        android:id="@+id/action_Setting"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="Settings"
        android:icon="@drawable/ic_action_settings"/>
    

</menu>